Get to searching

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,10 @@ edition = "2018"
 name = "tamashii"
 version = "0.1.0"
 [dependencies]
-bytes = "*"
-futures = "0.1"
-md5 = "*"
-tokio = "0.1"
+bytes = "0.4.12"
+futures = "0.1.29"
+md5 = "0.6.1"
+rand = "0.7.2"
+tokio = "0.1.22"
+num-traits = "0.2.8"
+num-derive = "0.2.5"
