--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ tokio = "0.1.22"
 num-traits = "0.2.8"
 num-derive = "0.2.5"
 flate2 = "1.0.11"
+byteorder = "1.3.2"
+log = "0.4.8"
+env_logger = "0.6.2"
